force-app/main/default/objects/ServiceTerritory/fields/FSM_DefaultServiceReportTemplate__c.field-meta.xml
<CustomField>
    <fullName>FSM_DefaultServiceReportTemplate__c</fullName>
    <description>Created as part of SFS-6565</description>
    <label>Default Service Report Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>