force-app/main/default/objects/ServiceTerritory/fields/FSM_GISLayerID__c.field-meta.xml
<CustomField>
    <fullName>FSM_GISLayerID__c</fullName>
    <description>Created as part of SFI-29</description>
    <label>GIS Layer ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>