force-app/main/default/objects/ServiceTerritory/fields/FSM_IsPolygonBasedOnStandardTextKey__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsPolygonBasedOnStandardTextKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Polygon based on StandardTextKey?</label>
    <type>Checkbox</type>
</CustomField>