force-app/main/default/objects/ServiceTerritory/fields/FSM_NumberOfDaysToDispatch__c.field-meta.xml
<CustomField>
    <fullName>FSM_NumberOfDaysToDispatch__c</fullName>
    <description>Created as part of user story #SFS-814</description>
    <label>Number of Days to Dispatch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>