force-app/main/default/objects/ServiceTerritory/fields/FSM_OperatingHours2Hr__c.field-meta.xml
<CustomField>
    <fullName>FSM_OperatingHours2Hr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Operating Hours (2Hr)</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Service Territories</relationshipLabel>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>