force-app/main/default/objects/ServiceTerritory/fields/FSM_PublicGroupUpdateDateTimeTriger__c.field-meta.xml
<CustomField>
    <fullName>FSM_PublicGroupUpdateDateTimeTriger__c</fullName>
    <description>SFS-231</description>
    <label>Public Group Update Date Time Triger</label>
    <type>DateTime</type>
</CustomField>