force-app/main/default/objects/ServiceTerritory/fields/FSM_SASharingforSelfScheduling__c.field-meta.xml
<CustomField>
    <fullName>FSM_SASharingforSelfScheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4077</description>
    <label>SA Sharing for Self Scheduling</label>
    <type>Checkbox</type>
</CustomField>