force-app/main/default/objects/ServiceTerritory/fields/FSM_SchedulingPolicy__c.field-meta.xml
<CustomField>
    <fullName>FSM_SchedulingPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for SFS-107</description>
    <inlineHelpText>Customer based policy</inlineHelpText>
    <label>Appointment Booking Scheduling Policy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.FSM_BusinessUnit__c</field>
            <operation>equals</operation>
            <valueField>FSL__Scheduling_Policy__c.FSM_BusinessUnit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Service Territories</relationshipLabel>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>