force-app/main/default/objects/ServiceTerritory/fields/FSM_TerritoryCapacityType__c.field-meta.xml
<CustomField>
    <fullName>FSM_TerritoryCapacityType__c</fullName>
    <label>Territory Capacity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment/Non Appointment</fullName>
            </value>
            <value>
                <fullName>Reactive/Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>