force-app/main/default/objects/ServiceTerritory/fields/FSM_WorkingSubAreaRequired__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkingSubAreaRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-110</description>
    <label>Working Sub Area Required?</label>
    <type>Checkbox</type>
</CustomField>