force-app/main/default/objects/ServiceTerritory/fields/FSM_Workmate_Territory__c.field-meta.xml
<CustomField>
    <fullName>FSM_Workmate_Territory__c</fullName>
    <formula>CONTAINS(ParentTerritory.Name,&apos;Workmate&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workmate Territory</label>
    <type>Checkbox</type>
</CustomField>