force-app/main/default/objects/ServiceTerritory/validationRules/Fsm_PreventEditOrNewCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>Fsm_PreventEditOrNewCreate</fullName>
    <active>true</active>
    <description>Prevent User to creat/Update service territory record
Created as part of SFL-886</description>
    <errorConditionFormula>$Permission.FSM_RestrictEditOtherRecords</errorConditionFormula>
    <errorMessage>You do not have sufficient access to perform this action.</errorMessage>
</ValidationRule>