force-app/main/default/objects/ServiceTerritory/validationRules/FSM_PreventSTCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_PreventSTCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(isNEW(),$Permission.FSM_PreventSASTCreation )</errorConditionFormula>
    <errorMessage>You do not have sufficient access to create Service Territory</errorMessage>
</ValidationRule>