force-app/main/default/objects/ServiceTerritory/listViews/My_ServiceTerritories.listView-meta.xml
<ListView>
    <fullName>My_ServiceTerritories</fullName>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>OperatingHours</columns>
    <columns>ParentTerritory</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>FSM_AutoSchedulePolicy__c</columns>
    <columns>FSM_NumberOfDaysToDispatch__c</columns>
    <columns>FSL__NumberOfServicesToDripFeed__c</columns>
    <columns>FSL__O2_Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Service Territories</label>
</ListView>